# crypto-notes

./: .gitignore  CMakeLists.txt  README.md  cryptonotes_ru.qm  cryptonotes_ru.ts  icon.rc  qtquickcontrols2.conf  res.qrc
headers/: appconfig.h  appcontext.h  database.h  formatter.h  notelist.h  notelistmodel.h  queries.h
include/: appconfig.h  appcontext.h  backuppathlistmodel.h  database.h  formatter.h  note.h  notelist.h  notelistmodel.h  passwordgenerator.h  queries.h
include/cli/: cliaction.h  globals.h  parsearguments.h  tablecell.h  tablerow.h  terminal.h
include/filters/: mouseeventfilter.h
include/models/: backuppathlistmodel.h  notelistmodel.h
include/storage/: appconfig.h  database.h  notelist.h  queries.h
include/tasks/: backgroundbackupthread.h
include/utils/: formatter.h
libs/linux/: libsqlcipher.so.0.8.6
src/: appconfig.cpp  appcontext.cpp  backgroundbackupthread.cpp  backuppathlistmodel.cpp  database.cpp  formatter.cpp  main.cpp  mouseeventfilter.cpp  note.cpp  notelist.cpp  notelistmodel.cpp  passwordgenerator.cpp
src/cli/: main.cpp  parsearguments.cpp  tablecell.cpp  tablerow.cpp  terminal.cpp
src/filters/: mouseeventfilter.cpp
src/models/: backuppathlistmodel.cpp  notelistmodel.cpp
src/storage/: appconfig.cpp  database.cpp  note.cpp  notelist.cpp
src/tasks/: backgroundbackupthread.cpp
src/utils/: formatter.cpp  passwordgenerator.cpp
translations/: cryptonotes_ru.qm  cryptonotes_ru.ts
ui/: About.qml  Auth.qml  BackupPathListRow.qml  Editor.qml  ErrorMessage.qml  List.qml  ListRow.qml  Settings.qml  Window.qml  auth.qml  editor.qml  list.qml  settings.qml  window.qml
